[gd_scene load_steps=2 format=2]

[ext_resource path="res://SaveLoad.gd" type="Script" id=1]

[node name="SaveLoad" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -168.209
margin_top = -137.751
margin_right = 1255.79
margin_bottom = 822.249
color = Color( 0.356863, 0.556863, 0.533333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Button" parent="."]
margin_left = 18.7
margin_top = 26.154
margin_right = 168.7
margin_bottom = 76.154
text = "Save Slot 1"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Button" parent="."]
margin_left = 18.7
margin_top = 94.67
margin_right = 168.7
margin_bottom = 144.67
text = "Save Slot 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Button" parent="."]
margin_left = 18.7
margin_top = 163.355
margin_right = 168.7
margin_bottom = 213.355
text = "Save Slot 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 19.0
margin_top = 245.0
margin_right = 103.0
margin_bottom = 292.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save1" type="Button" parent="."]
margin_left = 176.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 47.0
disabled = true
text = "Overwrite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete1" type="Button" parent="."]
margin_left = 176.251
margin_top = 54.7492
margin_right = 257.251
margin_bottom = 75.7492
disabled = true
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save2" type="Button" parent="."]
margin_left = 176.0
margin_top = 94.9221
margin_right = 257.0
margin_bottom = 115.922
disabled = true
text = "Overwrite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete2" type="Button" parent="."]
margin_left = 176.251
margin_top = 124.42
margin_right = 257.251
margin_bottom = 145.42
disabled = true
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save3" type="Button" parent="."]
margin_left = 174.502
margin_top = 163.095
margin_right = 255.502
margin_bottom = 184.095
disabled = true
text = "Overwrite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete3" type="Button" parent="."]
margin_left = 174.753
margin_top = 191.844
margin_right = 255.753
margin_bottom = 212.844
disabled = true
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 309.0
margin_top = 44.0
margin_right = 658.0
margin_bottom = 194.0
text = "You can save your game in any of these slots!
Once you've saved your game in a slot, click it again
any time to come back to the point you saved. You
can also override any save slot with a new save, or 
just delete it if you want to get rid of it! Once a save 
is deleted, it's gone forever, so be careful!

Also feel free to exit the game and come back later, as
your saves will still be here!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Slot1" to="." method="_on_Slot1_pressed"]
[connection signal="pressed" from="Slot2" to="." method="_on_Slot2_pressed"]
[connection signal="pressed" from="Slot3" to="." method="_on_Slot3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Save1" to="." method="_on_Save1_pressed"]
[connection signal="pressed" from="Delete1" to="." method="_on_Delete1_pressed"]
[connection signal="pressed" from="Save2" to="." method="_on_Save2_pressed"]
[connection signal="pressed" from="Delete2" to="." method="_on_Delete2_pressed"]
[connection signal="pressed" from="Save3" to="." method="_on_Save3_pressed"]
[connection signal="pressed" from="Delete3" to="." method="_on_Delete3_pressed"]
